app/components/CustomScrollbars.css
.custom-scrollbars {
  display: flex;
  flex-direction: column;
  position: relative;
  height: 100%;
}

.custom-scrollbars__scrollable {
  width: 100%;
  height: 100%;
}

.custom-scrollbars__scrollable::-webkit-scrollbar {
  display: none;
}

.custom-scrollbars__thumb {
  background-color: rgba(255, 255, 255, 0.2);
  border-radius: 4px;
  width: 8px;
  transition: height 0.25s ease-in-out, opacity 0.25s ease-in-out;
  pointer-events: none;
  opacity: 0;
  z-index: 99;
}

.custom-scrollbars__thumb--visible {
  /* thumb appears without animation */
  transition: height 0.25s ease-in-out;
  opacity: 1;
}

